<resources>
    <string name="app_name">Bluetooth Chat - Client</string>
    <string name="connect_to_bluetooth_server">CONNECT TO BLUETOOTH SERVER</string>
    <string name="status_not_connected">Status: not connected</string>
    <string name="umidity_value">UMIDITY VALUE</string>
    <string name="textview">TextView</string>
    <string name="close">Close</string>
    <string name="disconnect_to_bluetooth_server">DISCONNECT TO BLUETOOTH SERVER</string>
    <string name="autoMode">Auto Mode</string>
    <string name="sendBtn">Send Value</string>
    <string name="start_erogation">Start Erogation</string>
    <string name="manual_state"> Manual Mode</string>
    <string name="disconnected"> Disconnected from Manual Mode</string>
    <string name="sentValue">Hai inviato </string>
    <string name="insert_water_volume_in_liters_minutes">Insert water volume in liters/minutes</string>
    <string name="auto_mode">Auto Mode</string>

</resources>
