<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ToggleButton
        android:id="@+id/connectBtn"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_weight="1"
        android:text="@string/connect_to_bluetooth_server" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="379dp"
        android:layout_height="106dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/status_not_connected"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/umidityText"
        android:layout_width="315dp"
        android:layout_height="74dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/umidity_value"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/umidityValue"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/insert_water_volume_in_liters_minutes"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/seekBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:focusable="true"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/manualMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/manual_state"
            android:visibility="invisible" />

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:enabled="false"
            android:text="@string/sendBtn"
            android:visibility="invisible" />

        <Button
            android:id="@+id/autoMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:enabled="false"
            android:text="@string/auto_mode"
            android:visibility="invisible" />

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:enabled="false"
            android:text="@string/close"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>